// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Info Footer Default 1`] = `
<footer
  className="info"
>
  <p>
    Double-click to edit a todo
  </p>
  <p>
    Created by 
    <a
      href="https://github.com/falkoschumann/todomvc-typescript-react"
    >
      Falko Schumann
    </a>
  </p>
</footer>
`;

exports[`Storyshots Todo Item Completed 1`] = `
<section
  className="todoapp"
>
  <section
    className="main"
  >
    <ul
      className="todo-list"
    >
      <li
        className="completed"
      >
        <div
          className="view"
        >
          <input
            checked={true}
            className="toggle"
            title="Toggle"
            type="checkbox"
          />
          <label
            onDoubleClick={[Function]}
          >
            Taste JavaScript
          </label>
          <button
            className="destroy"
            title="Destroy"
          />
        </div>
        <input
          className="edit"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          value="Taste JavaScript"
        />
      </li>
    </ul>
  </section>
</section>
`;

exports[`Storyshots Todo Item Default 1`] = `
<section
  className="todoapp"
>
  <section
    className="main"
  >
    <ul
      className="todo-list"
    >
      <li
        className=""
      >
        <div
          className="view"
        >
          <input
            checked={false}
            className="toggle"
            title="Toggle"
            type="checkbox"
          />
          <label
            onDoubleClick={[Function]}
          >
            Taste JavaScript
          </label>
          <button
            className="destroy"
            title="Destroy"
          />
        </div>
        <input
          className="edit"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          value="Taste JavaScript"
        />
      </li>
    </ul>
  </section>
</section>
`;

exports[`Storyshots Todo Item Editing 1`] = `
<section
  className="todoapp"
>
  <section
    className="main"
  >
    <ul
      className="todo-list"
    >
      <li
        className="editing"
      >
        <div
          className="view"
        >
          <input
            checked={false}
            className="toggle"
            title="Toggle"
            type="checkbox"
          />
          <label
            onDoubleClick={[Function]}
          >
            Taste JavaScript
          </label>
          <button
            className="destroy"
            title="Destroy"
          />
        </div>
        <input
          className="edit"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          value="Taste JavaScript"
        />
      </li>
    </ul>
  </section>
</section>
`;

exports[`Storyshots Todo List All Completed 1`] = `
<section
  className="todoapp"
>
  <section
    className="main"
  >
    <input
      checked={true}
      className="toggle-all"
      id="toggle-all"
      onChange={[Function]}
      title="Toggle all"
      type="checkbox"
    />
    <label
      htmlFor="toggle-all"
    >
      Mark all as complete
    </label>
    <ul
      className="todo-list"
    >
      <li
        className="completed"
      >
        <div
          className="view"
        >
          <input
            checked={true}
            className="toggle"
            title="Toggle"
            type="checkbox"
          />
          <label
            onDoubleClick={[Function]}
          >
            Taste JavaScript
          </label>
          <button
            className="destroy"
            title="Destroy"
          />
        </div>
        <input
          className="edit"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          value="Taste JavaScript"
        />
      </li>
      <li
        className=""
      >
        <div
          className="view"
        >
          <input
            checked={false}
            className="toggle"
            title="Toggle"
            type="checkbox"
          />
          <label
            onDoubleClick={[Function]}
          >
            Buy a unicorn
          </label>
          <button
            className="destroy"
            title="Destroy"
          />
        </div>
        <input
          className="edit"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          value="Buy a unicorn"
        />
      </li>
    </ul>
  </section>
</section>
`;

exports[`Storyshots Todo List Default 1`] = `
<section
  className="todoapp"
>
  <section
    className="main"
  >
    <input
      checked={false}
      className="toggle-all"
      id="toggle-all"
      onChange={[Function]}
      title="Toggle all"
      type="checkbox"
    />
    <label
      htmlFor="toggle-all"
    >
      Mark all as complete
    </label>
    <ul
      className="todo-list"
    >
      <li
        className="completed"
      >
        <div
          className="view"
        >
          <input
            checked={true}
            className="toggle"
            title="Toggle"
            type="checkbox"
          />
          <label
            onDoubleClick={[Function]}
          >
            Taste JavaScript
          </label>
          <button
            className="destroy"
            title="Destroy"
          />
        </div>
        <input
          className="edit"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          value="Taste JavaScript"
        />
      </li>
      <li
        className=""
      >
        <div
          className="view"
        >
          <input
            checked={false}
            className="toggle"
            title="Toggle"
            type="checkbox"
          />
          <label
            onDoubleClick={[Function]}
          >
            Buy a unicorn
          </label>
          <button
            className="destroy"
            title="Destroy"
          />
        </div>
        <input
          className="edit"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          value="Buy a unicorn"
        />
      </li>
    </ul>
  </section>
</section>
`;

exports[`Storyshots Todo List Footer 0 Items left 1`] = `
<section
  className="todoapp"
>
  <footer
    className="footer"
  >
    <span
      className="todo-count"
    >
      <strong>
        0
      </strong>
       item
      s
       left
    </span>
    <ul
      className="filters"
    >
      <li>
        <a
          className="selected"
          href="/"
          onClick={[Function]}
        >
          All
        </a>
      </li>
      <li>
        <a
          href="/active"
          onClick={[Function]}
        >
          Active
        </a>
      </li>
      <li>
        <a
          href="/completed"
          onClick={[Function]}
        >
          Completed
        </a>
      </li>
    </ul>
    <button
      className="clear-completed"
    >
      Clear completed
    </button>
  </footer>
</section>
`;

exports[`Storyshots Todo List Footer 1 Item left 1`] = `
<section
  className="todoapp"
>
  <footer
    className="footer"
  >
    <span
      className="todo-count"
    >
      <strong>
        1
      </strong>
       item
       left
    </span>
    <ul
      className="filters"
    >
      <li>
        <a
          className="selected"
          href="/"
          onClick={[Function]}
        >
          All
        </a>
      </li>
      <li>
        <a
          href="/active"
          onClick={[Function]}
        >
          Active
        </a>
      </li>
      <li>
        <a
          href="/completed"
          onClick={[Function]}
        >
          Completed
        </a>
      </li>
    </ul>
  </footer>
</section>
`;

exports[`Storyshots Todo List Footer Has completed Items 1`] = `
<section
  className="todoapp"
>
  <footer
    className="footer"
  >
    <span
      className="todo-count"
    >
      <strong>
        0
      </strong>
       item
      s
       left
    </span>
    <ul
      className="filters"
    >
      <li>
        <a
          className="selected"
          href="/"
          onClick={[Function]}
        >
          All
        </a>
      </li>
      <li>
        <a
          href="/active"
          onClick={[Function]}
        >
          Active
        </a>
      </li>
      <li>
        <a
          href="/completed"
          onClick={[Function]}
        >
          Completed
        </a>
      </li>
    </ul>
    <button
      className="clear-completed"
    >
      Clear completed
    </button>
  </footer>
</section>
`;

exports[`Storyshots Todo List Footer Hidden by Default 1`] = `
<section
  className="todoapp"
/>
`;

exports[`Storyshots Todo List Footer Multiple Items left 1`] = `
<section
  className="todoapp"
>
  <footer
    className="footer"
  >
    <span
      className="todo-count"
    >
      <strong>
        3
      </strong>
       item
      s
       left
    </span>
    <ul
      className="filters"
    >
      <li>
        <a
          className="selected"
          href="/"
          onClick={[Function]}
        >
          All
        </a>
      </li>
      <li>
        <a
          href="/active"
          onClick={[Function]}
        >
          Active
        </a>
      </li>
      <li>
        <a
          href="/completed"
          onClick={[Function]}
        >
          Completed
        </a>
      </li>
    </ul>
  </footer>
</section>
`;

exports[`Storyshots Todo List Footer Show active Items 1`] = `
<section
  className="todoapp"
>
  <footer
    className="footer"
  >
    <span
      className="todo-count"
    >
      <strong>
        1
      </strong>
       item
       left
    </span>
    <ul
      className="filters"
    >
      <li>
        <a
          href="/"
          onClick={[Function]}
        >
          All
        </a>
      </li>
      <li>
        <a
          className="selected"
          href="/active"
          onClick={[Function]}
        >
          Active
        </a>
      </li>
      <li>
        <a
          href="/completed"
          onClick={[Function]}
        >
          Completed
        </a>
      </li>
    </ul>
  </footer>
</section>
`;

exports[`Storyshots Todo List Footer Show completed Items 1`] = `
<section
  className="todoapp"
>
  <footer
    className="footer"
  >
    <span
      className="todo-count"
    >
      <strong>
        1
      </strong>
       item
       left
    </span>
    <ul
      className="filters"
    >
      <li>
        <a
          href="/"
          onClick={[Function]}
        >
          All
        </a>
      </li>
      <li>
        <a
          href="/active"
          onClick={[Function]}
        >
          Active
        </a>
      </li>
      <li>
        <a
          className="selected"
          href="/completed"
          onClick={[Function]}
        >
          Completed
        </a>
      </li>
    </ul>
  </footer>
</section>
`;

exports[`Storyshots Todo List Header Default 1`] = `
<section
  className="todoapp"
>
  <header
    className="header"
  >
    <h1>
      todos
    </h1>
    <input
      autoFocus={true}
      className="new-todo"
      onKeyDown={[Function]}
      placeholder="What needs to be done?"
    />
  </header>
</section>
`;

exports[`Storyshots Todos Controller Active Filter 1`] = `
<section
  className="todoapp"
>
  <header
    className="header"
  >
    <h1>
      todos
    </h1>
    <input
      autoFocus={true}
      className="new-todo"
      onKeyDown={[Function]}
      placeholder="What needs to be done?"
    />
  </header>
  <section
    className="main"
  >
    <input
      checked={false}
      className="toggle-all"
      id="toggle-all"
      onChange={[Function]}
      title="Toggle all"
      type="checkbox"
    />
    <label
      htmlFor="toggle-all"
    >
      Mark all as complete
    </label>
    <ul
      className="todo-list"
    >
      <li
        className=""
      >
        <div
          className="view"
        >
          <input
            checked={false}
            className="toggle"
            onChange={[Function]}
            title="Toggle"
            type="checkbox"
          />
          <label
            onDoubleClick={[Function]}
          >
            Buy a unicorn
          </label>
          <button
            className="destroy"
            onClick={[Function]}
            title="Destroy"
          />
        </div>
        <input
          className="edit"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          value="Buy a unicorn"
        />
      </li>
    </ul>
  </section>
  <footer
    className="footer"
  >
    <span
      className="todo-count"
    >
      <strong>
        1
      </strong>
       item
       left
    </span>
    <ul
      className="filters"
    >
      <li>
        <a
          href="/"
          onClick={[Function]}
        >
          All
        </a>
      </li>
      <li>
        <a
          className="selected"
          href="/active"
          onClick={[Function]}
        >
          Active
        </a>
      </li>
      <li>
        <a
          href="/completed"
          onClick={[Function]}
        >
          Completed
        </a>
      </li>
    </ul>
    <button
      className="clear-completed"
      onClick={[Function]}
    >
      Clear completed
    </button>
  </footer>
</section>
`;

exports[`Storyshots Todos Controller Active Filter Without Active Todos 1`] = `
<section
  className="todoapp"
>
  <header
    className="header"
  >
    <h1>
      todos
    </h1>
    <input
      autoFocus={true}
      className="new-todo"
      onKeyDown={[Function]}
      placeholder="What needs to be done?"
    />
  </header>
  <footer
    className="footer"
  >
    <span
      className="todo-count"
    >
      <strong>
        0
      </strong>
       item
      s
       left
    </span>
    <ul
      className="filters"
    >
      <li>
        <a
          href="/"
          onClick={[Function]}
        >
          All
        </a>
      </li>
      <li>
        <a
          className="selected"
          href="/active"
          onClick={[Function]}
        >
          Active
        </a>
      </li>
      <li>
        <a
          href="/completed"
          onClick={[Function]}
        >
          Completed
        </a>
      </li>
    </ul>
    <button
      className="clear-completed"
      onClick={[Function]}
    >
      Clear completed
    </button>
  </footer>
</section>
`;

exports[`Storyshots Todos Controller Completed Filter 1`] = `
<section
  className="todoapp"
>
  <header
    className="header"
  >
    <h1>
      todos
    </h1>
    <input
      autoFocus={true}
      className="new-todo"
      onKeyDown={[Function]}
      placeholder="What needs to be done?"
    />
  </header>
  <section
    className="main"
  >
    <input
      checked={false}
      className="toggle-all"
      id="toggle-all"
      onChange={[Function]}
      title="Toggle all"
      type="checkbox"
    />
    <label
      htmlFor="toggle-all"
    >
      Mark all as complete
    </label>
    <ul
      className="todo-list"
    >
      <li
        className="completed"
      >
        <div
          className="view"
        >
          <input
            checked={true}
            className="toggle"
            onChange={[Function]}
            title="Toggle"
            type="checkbox"
          />
          <label
            onDoubleClick={[Function]}
          >
            Taste JavaScript
          </label>
          <button
            className="destroy"
            onClick={[Function]}
            title="Destroy"
          />
        </div>
        <input
          className="edit"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          value="Taste JavaScript"
        />
      </li>
    </ul>
  </section>
  <footer
    className="footer"
  >
    <span
      className="todo-count"
    >
      <strong>
        1
      </strong>
       item
       left
    </span>
    <ul
      className="filters"
    >
      <li>
        <a
          href="/"
          onClick={[Function]}
        >
          All
        </a>
      </li>
      <li>
        <a
          href="/active"
          onClick={[Function]}
        >
          Active
        </a>
      </li>
      <li>
        <a
          className="selected"
          href="/completed"
          onClick={[Function]}
        >
          Completed
        </a>
      </li>
    </ul>
    <button
      className="clear-completed"
      onClick={[Function]}
    >
      Clear completed
    </button>
  </footer>
</section>
`;

exports[`Storyshots Todos Controller Completed Filter Without Completed Todos 1`] = `
<section
  className="todoapp"
>
  <header
    className="header"
  >
    <h1>
      todos
    </h1>
    <input
      autoFocus={true}
      className="new-todo"
      onKeyDown={[Function]}
      placeholder="What needs to be done?"
    />
  </header>
  <footer
    className="footer"
  >
    <span
      className="todo-count"
    >
      <strong>
        1
      </strong>
       item
       left
    </span>
    <ul
      className="filters"
    >
      <li>
        <a
          href="/"
          onClick={[Function]}
        >
          All
        </a>
      </li>
      <li>
        <a
          href="/active"
          onClick={[Function]}
        >
          Active
        </a>
      </li>
      <li>
        <a
          className="selected"
          href="/completed"
          onClick={[Function]}
        >
          Completed
        </a>
      </li>
    </ul>
  </footer>
</section>
`;

exports[`Storyshots Todos Controller Default 1`] = `
<section
  className="todoapp"
>
  <header
    className="header"
  >
    <h1>
      todos
    </h1>
    <input
      autoFocus={true}
      className="new-todo"
      onKeyDown={[Function]}
      placeholder="What needs to be done?"
    />
  </header>
  <section
    className="main"
  >
    <input
      checked={false}
      className="toggle-all"
      id="toggle-all"
      onChange={[Function]}
      title="Toggle all"
      type="checkbox"
    />
    <label
      htmlFor="toggle-all"
    >
      Mark all as complete
    </label>
    <ul
      className="todo-list"
    >
      <li
        className="completed"
      >
        <div
          className="view"
        >
          <input
            checked={true}
            className="toggle"
            onChange={[Function]}
            title="Toggle"
            type="checkbox"
          />
          <label
            onDoubleClick={[Function]}
          >
            Taste JavaScript
          </label>
          <button
            className="destroy"
            onClick={[Function]}
            title="Destroy"
          />
        </div>
        <input
          className="edit"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          value="Taste JavaScript"
        />
      </li>
      <li
        className=""
      >
        <div
          className="view"
        >
          <input
            checked={false}
            className="toggle"
            onChange={[Function]}
            title="Toggle"
            type="checkbox"
          />
          <label
            onDoubleClick={[Function]}
          >
            Buy a unicorn
          </label>
          <button
            className="destroy"
            onClick={[Function]}
            title="Destroy"
          />
        </div>
        <input
          className="edit"
          onBlur={[Function]}
          onChange={[Function]}
          onKeyDown={[Function]}
          value="Buy a unicorn"
        />
      </li>
    </ul>
  </section>
  <footer
    className="footer"
  >
    <span
      className="todo-count"
    >
      <strong>
        1
      </strong>
       item
       left
    </span>
    <ul
      className="filters"
    >
      <li>
        <a
          className="selected"
          href="/"
          onClick={[Function]}
        >
          All
        </a>
      </li>
      <li>
        <a
          href="/active"
          onClick={[Function]}
        >
          Active
        </a>
      </li>
      <li>
        <a
          href="/completed"
          onClick={[Function]}
        >
          Completed
        </a>
      </li>
    </ul>
    <button
      className="clear-completed"
      onClick={[Function]}
    >
      Clear completed
    </button>
  </footer>
</section>
`;
